--- a/frontend-vite/index.html
+++ b/frontend-vite/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>Youtify - Music Podcasts Videocasts</title>
   </head>
   <body>
